<resources>
    <string name="byedpi_docs">https://github.com/hufrea/byedpi/blob/v0.13/README.md</string>
    <string name="app_name">Zapret Mobile</string>
    <string name="brand_byline">by lolososka</string>
    <string name="vpn_connect">Включить Zapret</string>
    <string name="vpn_disconnect">Выключить</string>
    <string name="vpn_connected">Zapret включён</string>
    <string name="vpn_disconnected">Готов к запуску</string>
    <string name="proxy_up">Прокси запущен</string>
    <string name="proxy_down">Прокси выключен</string>
    <string name="proxy_start">Запустить прокси</string>
    <string name="proxy_stop">Остановить</string>
    <string name="settings">Настройки</string>
    <string name="vpn_permission_denied">Разрешение VPN не выдано</string>
    <string name="settings_unavailable">Сначала выключите Zapret</string>
    <string name="title_settings">Настройки</string>
    <string name="save_logs">Сохранить диагностику</string>
    <string name="reset_settings">Сбросить</string>
    <string name="logs_failed">Не удалось собрать журнал</string>
    <string name="proxy_address">%1$s:%2$s</string>
    <string name="telegram_card_title">Telegram</string>
    <string name="telegram_proxy_off">ПРОКСИ ВЫКЛЮЧЕН</string>
    <string name="telegram_proxy_starting">ЗАПУСК ПРОКСИ…</string>
    <string name="telegram_proxy_ready">ПРОКСИ ДОСТУПЕН</string>
    <string name="telegram_proxy_address">MTProto WS  %1$s:%2$s</string>
    <string name="telegram_setup">Добавить в Telegram</string>
    <string name="telegram_setup_title">Прокси Telegram</string>
    <string name="telegram_ws_setup_stopped">MTProto WS выключен\n\n%1$s</string>
    <string name="telegram_ws_setup_running">MTProto WS работает\n\n%1$s</string>
    <string name="telegram_ws_start">Запустить и применить</string>
    <string name="telegram_ws_stop">Остановить</string>
    <string name="telegram_add_proxy">Добавить в Telegram</string>
    <string name="telegram_copy_proxy">Скопировать адрес</string>
    <string name="telegram_open_app">Открыть Telegram</string>
    <string name="telegram_check_proxy">Проверить прокси</string>
    <string name="telegram_proxy_copied">Ссылка скопирована</string>
    <string name="telegram_proxy_checking">Проверка прокси…</string>
    <string name="telegram_proxy_check_ok">Прокси доступен</string>
    <string name="telegram_proxy_check_failed">Прокси не отвечает. Запустите «Локальный прокси».</string>
    <string name="telegram_not_installed">Telegram не найден на устройстве</string>
    <string name="telegram_proxy_invalid">Проверьте порт локального прокси в настройках</string>
    <string name="telegram_proxy_start_first">Сначала запустите MTProto‑прокси Telegram</string>
    <string name="telegram_proxy_opened">Прокси открыт в Telegram</string>
    <string name="telegram_proxy_manual_fallback">Telegram не открыл ссылку. Скопируйте её вручную.</string>
    <string name="telegram_ws_channel">Telegram MTProto</string>
    <string name="telegram_ws_starting">Запуск Telegram‑прокси…</string>
    <string name="telegram_ws_running">Telegram‑прокси · 127.0.0.1:%1$d</string>
    <string name="telegram_ws_failed">Не удалось запустить Telegram MTProto</string>
    <string name="connection_label">Соединение</string>
    <string name="strategy_badge">Стратегия · %1$s</string>
    <string name="strategy_change">Сменить стратегию</string>
    <string name="mode_switch">Сменить режим</string>
    <string name="messaging_compat">Совместимость с мессенджерами</string>
    <string name="dial_toggle">Включить или выключить Zapret</string>
    <string name="connection_uptime">Время %1$s · ping %2$s</string>
    <string name="connection_traffic">↓ %1$s   ↑ %2$s</string>
    <string name="metric_unavailable">—</string>
    <string name="mode_vpn_value">VPN</string>
    <string name="mode_proxy_value">Локальный прокси</string>
    <string name="route_dial_description">Индикатор маршрута</string>
    <string name="route_dial_stopped">Маршрут остановлен</string>
    <string name="route_dial_running">Маршрут активен</string>
    <string name="components_attribution_title">Открытые компоненты</string>
    <string name="theme_settings">Оформление</string>
    <string name="mode_setting">Режим</string>
    <string name="dbs_ip_setting">DNS-сервер</string>
    <string name="bye_dpi_proxy_ip_setting">Адрес прослушивания</string>
    <string name="byedpi_proxy_port_setting">Порт</string>
    <string name="byedpi_max_connections_setting">Максимум соединений</string>
    <string name="byedpi_buffer_size_setting">Размер буфера</string>
    <string name="byedpi_default_ttl_setting">TTL по умолчанию</string>
    <string name="byedpi_no_domain_setting">Без домена</string>
    <string name="byedpi_desync_method_setting">Метод десинхронизации</string>
    <string name="byedpi_split_position_setting">Позиция разделения</string>
    <string name="byedpi_split_at_host_setting">Разделять у Host</string>
    <string name="byedpi_fake_ttl_setting">TTL подменных пакетов</string>
    <string name="byedpi_host_mixed_case_setting">Смешанный регистр Host</string>
    <string name="byedpi_domain_mixed_case_setting">Смешанный регистр домена</string>
    <string name="byedpi_host_remove_spaces_setting">Убирать пробелы в Host</string>
    <string name="byedpi_tlsrec_enabled_setting">Разделять TLS-запись</string>
    <string name="byedpi_tlsrec_position_setting">Позиция разделения TLS-записи</string>
    <string name="byedpi_tlsrec_at_sni_setting">Разделять TLS-запись у SNI</string>
    <string name="version">Версия</string>
    <string name="source_code_link">Исходный код</string>
    <string name="upstream_source_code_link">ByeDPIAndroid</string>
    <string name="components_source_code_link">ByeDPI</string>
    <string name="license_link">GPL-3.0</string>
    <string name="third_party_notices_link">Сторонние компоненты</string>
    <string name="byedpi_readme_link">Справка по параметрам ByeDPI</string>
    <string name="failed_to_start">Не удалось запустить %1$s</string>
    <string name="vpn_channel_name">VPN-подключение</string>
    <string name="proxy_channel_name">Локальный прокси</string>
    <string name="notification_title">Zapret Mobile</string>
    <string name="vpn_notification_content">VPN включён</string>
    <string name="proxy_notification_content">Прокси включён</string>
    <string name="general_category">Основное</string>
    <string name="byedpi_category">Параметры соединения</string>
    <string name="privacy_category">Приватность</string>
    <string name="privacy_minimal_logs">Краткая диагностика</string>
    <string name="privacy_minimal_logs_summary">Без подробного системного журнала</string>
    <string name="about_category">О приложении</string>
    <string name="command_line_editor">Аргументы командной строки</string>
    <string name="ui_editor">Параметры стратегии</string>
    <string name="use_command_line_settings">Использовать командную строку</string>
    <string name="desync_http">Десинхронизация HTTP</string>
    <string name="desync_https">Десинхронизация HTTPS</string>
    <string name="desync_udp">Десинхронизация UDP</string>
    <string name="oob_data">Данные вне полосы (OOB)</string>
    <string name="sni_of_fake_packet">SNI подменного пакета</string>
    <string name="byedpi_proxy">Локальный прокси</string>
    <string name="byedpi_desync">Десинхронизация</string>
    <string name="command_line_arguments">Аргументы командной строки</string>
    <string name="byedpi_hosts_mode_setting">Режим списка сайтов</string>
    <string name="byedpi_hosts_blacklist_setting">Список обрабатываемых сайтов</string>
    <string name="byedpi_hosts_whitelist_setting">Список исключений</string>
    <string name="byedpi_tcp_fast_open_setting">TCP Fast Open</string>
    <string name="byedpi_udp_fake_count">Число подменных UDP-пакетов</string>
    <string name="ipv6_setting">IPv6</string>
    <string name="byedpi_fake_offset_setting">Смещение подменных данных</string>
    <string name="byedpi_drop_sack_setting">Убирать SACK</string>
    <string name="desync_udp_category">UDP</string>
    <string name="desync_http_category">HTTP</string>
    <string name="desync_https_category">HTTPS</string>
    <string name="byedpi_protocols_category">Протоколы</string>
    <string name="strategy_picker_title">Подбор стратегии</string>
    <string name="strategy_apply">Применить</string>
    <string name="strategy_picker_setting">Стратегия</string>
    <string name="strategy_selected">Выбрано</string>
    <string name="strategy_not_selected">Не выбрано</string>
    <string name="strategy_auto">Авто</string>
    <string name="strategy_auto_active">Авто · %1$s</string>
    <string name="strategy_balanced">Баланс</string>
    <string name="strategy_strong">Максимум</string>
    <string name="strategy_applied_restart">Стратегия применена. Перезапуск…</string>
    <string name="strategy_messaging">Видео и звонки</string>
    <string name="strategy_games">Игровой трафик</string>
    <string name="strategy_auto_checking">Подбор стратегии…</string>
    <string name="strategy_auto_waiting">Прокси не остановился. Повторите попытку.</string>
    <string name="strategy_auto_selected">Выбрана: %1$s</string>
    <string name="strategy_auto_failed">Проверка не удалась. Оставлена прежняя стратегия.</string>
    <string name="update_title">Обновление</string>
    <string name="update_current_version">Версия %1$s</string>
    <string name="update_version_change">%1$s → %2$s</string>
    <string name="update_check">Проверить</string>
    <string name="update_checking">Проверка…</string>
    <string name="update_current">Установлена последняя версия</string>
    <string name="update_available">Доступна версия %1$s</string>
    <string name="update_notice_title">Доступно обновление</string>
    <string name="update_notice_version">Версия %1$s</string>
    <string name="update_subscription_unavailable">Проверка подписки пока недоступна. Обновление — в канале.</string>
    <string name="update_membership_title">Проверка подписки</string>
    <string name="update_membership_privacy">Бот получит ваш Telegram ID для проверки подписки на @Slag0dworld. Переписка не запрашивается.</string>
    <string name="update_membership_continue">Продолжить</string>
    <string name="update_membership_connecting">Подключение к боту…</string>
    <string name="update_membership_required">Подтвердите подписку на @Slag0dworld</string>
    <string name="update_membership_confirm">Подтвердить в Telegram</string>
    <string name="update_membership_check">Проверить подписку</string>
    <string name="update_membership_checking">Проверка подписки…</string>
    <string name="update_membership_waiting">Нажмите «Запустить» в боте, затем вернитесь сюда</string>
    <string name="update_membership_not_member">Подписка не найдена. Подпишитесь в боте и повторите проверку.</string>
    <string name="update_membership_verified">Подписка подтверждена</string>
    <string name="update_membership_expired">Проверка истекла. Подтвердите подписку заново.</string>
    <string name="update_membership_failed">Не удалось проверить подписку. Повторите или скачайте из канала.</string>
    <string name="update_membership_cooldown">Повторите проверку через %1$d сек.</string>
    <string name="update_open_bot">Открыть бота</string>
    <string name="update_open_channel">Открыть @Slag0dworld</string>
    <string name="update_channel">Канал обновлений</string>
    <string name="update_download_install">Скачать и установить</string>
    <string name="update_downloading">Загрузка…</string>
    <string name="update_downloading_progress">Загрузка · %1$d%%</string>
    <string name="update_installing">Открыт установщик</string>
    <string name="update_install">Установить</string>
    <string name="update_ready_install">Готово к установке</string>
    <string name="update_allow_install">Разрешите установку из этого источника</string>
</resources>