<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:tag="main_settings">

    <androidx.preference.PreferenceCategory
        android:title="@string/general_category">

        <DropDownPreference
            android:key="app_theme"
            android:title="@string/theme_settings"
            android:entries="@array/themes"
            android:entryValues="@array/themes_entries"
            android:defaultValue="dark"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:key="byedpi_mode"
            android:title="@string/mode_setting"
            android:entries="@array/byedpi_modes"
            android:entryValues="@array/byedpi_modes_entries"
            android:defaultValue="vpn"
            app:useSimpleSummaryProvider="true" />

        <com.takisoft.preferencex.EditTextPreference
            android:key="dns_ip"
            android:title="@string/dbs_ip_setting"
            android:defaultValue="1.1.1.1"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:key="ipv6_enable"
            android:title="@string/ipv6_setting"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="messaging_compat"
            android:title="@string/messaging_compat"
            android:summary="UDP-совместимость включена по умолчанию"
            android:defaultValue="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/privacy_category">

        <SwitchPreference
            android:key="privacy_minimal_logs"
            android:title="@string/privacy_minimal_logs"
            android:summary="@string/privacy_minimal_logs_summary"
            android:defaultValue="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/byedpi_category">

        <SwitchPreference
            android:key="byedpi_enable_cmd_settings"
            android:title="@string/use_command_line_settings"
            android:defaultValue="false" />

        <Preference
            android:key="strategy_picker"
            android:title="@string/strategy_picker_setting"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="byedpi_ui_settings"
            android:title="@string/ui_editor"
            app:useSimpleSummaryProvider="true"
            app:fragment="io.github.dovecoteescapee.byedpi.fragments.ByeDpiUISettingsFragment" />

        <Preference
            android:key="byedpi_cmd_settings"
            android:title="@string/command_line_editor"
            app:useSimpleSummaryProvider="true"
            app:fragment="io.github.dovecoteescapee.byedpi.fragments.ByeDpiCommandLineSettingsFragment" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/about_category">

        <Preference
            android:key="components_attribution"
            android:title="@string/components_attribution_title" />

        <Preference
            android:key="version"
            android:title="@string/version"
            app:useSimpleSummaryProvider="true"
            tools:summary="1.0.0" />

        <Preference
            android:key="source_code"
            android:title="@string/source_code_link"
            android:icon="@drawable/ic_github_36">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/lolososka/zapret-control-center-android" />
        </Preference>

        <Preference
            android:key="upstream_source_code"
            android:title="@string/upstream_source_code_link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/dovecoteescapee/ByeDPIAndroid" />
        </Preference>

        <Preference
            android:key="components_source_code"
            android:title="@string/components_source_code_link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/hufrea/byedpi" />
        </Preference>

        <Preference
            android:key="license"
            android:title="@string/license_link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/lolososka/zapret-control-center-android/blob/master/LICENSE" />
        </Preference>

        <Preference
            android:key="third_party_notices"
            android:title="@string/third_party_notices_link">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/lolososka/zapret-control-center-android/blob/master/THIRD_PARTY_NOTICES.md" />
        </Preference>

    </androidx.preference.PreferenceCategory>

</PreferenceScreen>
